--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.50.0</version>
+        </dependency>
     </dependencies>
 
     <build>
